# discord-theme

./: .gitignore  Cargo.toml  README.md  build.rs  compress.sh  old.css  procedure.md  theme.css
.github/ISSUE_TEMPLATE/: missing-theme-item.md
.github/workflows/: main.yml
assets/: old-compressed.css  old.css
src/: asar.rs  config.rs  main.rs
