[package]
name = "discord-theme"
version = "1.1.0"
authors = ["Bendi11 <bkliebmann@gmail.com>"]
edition = "2018"


[dependencies]
console = "0.14.1" # For color formatted console
dialoguer = "0.8" # For selection menus when no arguments are given
indicatif = "0.16" # For progress bars with file operations

serde_json = "1.0" # For parsing Discord's electron archive
ureq = {version = "2.1", optional = true} # For downloading the most up to date css stylesheet from Github
semver = "0.11" # For parsing the newest discord version string and selecting the newest Discord version

[build-dependencies]
humantime = "2.1" # For displaying when the program was last built if the user is building without autoupdate

[features]
autoupdate = ["ureq"] # Automatically download the newest CSS file from github; increases binary size by around 2MB
default = ["autoupdate"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
